# BlobTracker

./: CMakeLists.txt  README.md  main.cpp
data/: output.mov
inc/: BlockTracker.h  TrackerContext.h
src/: BlockTracker.cpp
